[feat] - add NotificationAARRADDalt api
